# MandelbrotQt

./: .clang-format  .gitignore  CMakeLists.txt  canvas.cpp  canvas.h  canvas_widget.cpp  canvas_widget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  painter.cpp  painter.h  params.h  renderer.cpp  renderer.h  rendering_job.h
